force-app/main/default/objects/FX_Order_Streaming__e/FX_Order_Streaming__e.object-meta.xml
<CustomObject>
    <label>FX Order Streaming</label>
    <pluralLabel>FX Order Streaming</pluralLabel>
</CustomObject>