force-app/main/default/objects/FX_Order_Streaming__e/fields/Buy_Sell__c.field-meta.xml
<CustomField>
    <fullName>Buy_Sell__c</fullName>
    <label>Buy/Sell</label>
    <length>255</length>
    <type>Text</type>
</CustomField>