force-app/main/default/objects/FX_Order_Streaming__e/fields/Currency_Pair__c.field-meta.xml
<CustomField>
    <fullName>Currency_Pair__c</fullName>
    <label>Currency Pair</label>
    <length>255</length>
    <type>Text</type>
</CustomField>