force-app/main/default/objects/FX_Order_Streaming__e/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>