force-app/main/default/objects/FX_Order_Streaming__e/fields/FX_Order_Summary_ID__c.field-meta.xml
<CustomField>
    <fullName>FX_Order_Summary_ID__c</fullName>
    <label>FX Order Summary ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>