force-app/main/default/objects/FX_Order_Streaming__e/fields/Total_Request_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Request_Amount__c</fullName>
    <label>Total Request Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>